# Projet_ESIR2_2018

./: GeoCentre.h  README.md
Code_Iwan/: CMakeLists.txt  main.cpp  mean.cpp  motion.cpp
absdiff/: CMakeLists.txt  main.cpp  motion.cpp
meanshift/: Tracking.cpp  Tracking.h  main.cpp
meanshift/git/: CMakeLists.txt  README.md  main.cpp
src/: CMakeCache.txt  CalibInit.h  CalibParam.h  GeoCentre.h  MainWindow.h  Makefile  error.txt  main.cpp  output
tracking/: GeoCentre.h  Tracking.cpp  Tracking.h  main.cpp
trackingV2/: Tracking.cpp  Tracking.h  main.cpp
